--- a/configs/slurm.config
+++ b/configs/slurm.config
@@ -1,7 +1,8 @@
 params {
   container_chipseeker = "/ictstr01/groups/idc/projects/uhlenhaut/jiang/singularity_image/chipseeker_1.0.1.sif"
-
   queue = 'cpu_p'
+  extra_mounts = "--bind /ictstr01/groups/idc/projects/uhlenhaut/jiang/pipelines"
+
 }
 
 process {
@@ -16,9 +17,17 @@ process {
     time   = '4h'
     container = params.container_chipseeker
   }
+
+  withName: chipseeker_master {
+    cpus   = 2
+    memory = '8 GB'
+    time   = '4h'
+    container = params.container_chipseeker
+  }
 }
 
 singularity {
-  enabled = true
+  enabled    = true
   autoMounts = true
+  runOptions = params.extra_mounts
 }
